--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -1,37 +1,63 @@
 <% breadcrumb :intro %>
+<% if notice %>
+<%= render :partial => 'layouts/notice',:locals=>{:notice=>notice} %>
+<% end %>
 <section id="sl_intro_index">
-	<article itemscope itemtype="http://schema.org/Person">
-		<div id="sl_intro_left" class="col-sm-12 col-md-6">
-			<a href="http://sleepinglion.cdn3.cafe24.com/intro_photo/photo/1/sl.jpg" class="simple_image" title="" itemprop="image">
-				<img src="http://sleepinglion.cdn3.cafe24.com/intro_photo/photo/1/large_thumb_sl.jpg" class="img-responsive" alt="" />
-			</a>
-		</div>
-		<div id="sl_intro_right" class="col-sm-12 col-md-6">
-			<h3><%=t(:sl_intro_title) %></h3>
-			<dl>
-				<dt><%=t(:name) %></dt>
-				<dd itemprop="name"><%=raw t(:name_call) %></dd>
-				<dt><%=t(:sex) %></dt>
-				<dd itemprop="gender"><%=t(:male) %></dd>
-				<dt><%=t(:birthday) %></dt>
-				<dd itemprop="birthDate" datetime="1981-06-02"><%=t(:sl_birthday) %></dd>
-				<dt><%=t(:job) %></dt>
-				<dd itemprop="jobTitle"><%=t(:web_programer) %></dd>
-				<dt><%=t(:height) %></dt>
-				<dd>180cm</dd>
-				<dt><%=t(:weight) %></dt>
-				<dd>80kg</dd>
-				<dt><%=t(:like) %></dt>
-				<dd>
-					개 , 아이들 , 철도 , 프로그래밍 , 리눅스 , 중국요리
-				</dd>
-				<dt><%=t(:hate) %></dt>
-				<dd>
-
-					자동차 , 학교 , 군대 , 윈도우 , 주한미군
-				</dd>
-			</dl>
-			<span class="none" itemprop="url">1</span>
-		</div>
-	</article>
+  <article id="intro_main_content" itemscope itemtype="http://schema.org/Person">
+    <div id="sl_intro_left" class="col-sm-12 col-md-6">
+      <%=link_to image_tag('intro.jpg',:class=>'img-responsive',:alt=>'정진규'), asset_path('intro_large.jpg'), :class=>'simple_image', :title=>'허허허허', :itemprop=>"image" %>
+    </div>
+    <div id="sl_intro_right" class="col-sm-12 col-md-6">
+      <h3>정진규 극비 신상공개!!!</h3>
+      <dl>
+        <dt>이름</dt>
+        <dd itemprop="name">정진규</dd>
+        <dt>성별</dt>
+        <dd itemprop="gender">남자</dd>
+        <dt>생일</dt>
+        <dd itemprop="birthDate" datetime="1953-11-02T17:00Z">1953년 11월 2일(음력)</dd>
+        <dt>직업</dt>
+        <dd itemprop="jobTitle">은퇴자</dd>
+        <dt>키</dt>
+        <dd>160cm</dd>
+        <dt>몸무게</dt>
+        <dd>90kg</dd>
+      </dl>
+    </div>
+  </article>
+  <article class="article2">
+    <h2>좋아하는것</h2>
+    <p itemprop="description">술,담배,여자,노래,춤등 노는것은 다 좋아함(도박도 좋아하지만 너무 못해서 못함)<br />독서,탁구,테니스,TV,낮잠,종호,버린물건 줏어오기,읽지도 않는 책 쌓아두기<br />
+      <b>거짓말</b>(하지만 할때마다 걸림 ㅜ.ㅜ, 성공할때까지 나의 거짓말은 계속 될꺼야~!)</p>
+  </article>
+  <article class="article3">
+    <h2>싫어하는것</h2>
+    <p itemprop="description">진실, 약속시간 맞춰가기, 남의말 듣기, 물건 버리는거, 책 버리는거(<b>사실 버려도 버렸는지도 모름</b>)</p>
+  </article>
+  <article class="article4">
+    <h2>약력</h2>
+    <dl>
+      <% unless @histories.empty? %>
+      <% @histories.each do |history| %>
+      <dt><%=history.year %></dt>
+      <dd>
+        <b><%=history.title %></b>
+        <%=simple_format(history.content) %>
+      <% if user_signed_in? %>
+      <% if current_user.admin? %>
+        <div class="history_menu">
+          <%= link_to t(:edit_link), edit_history_path(history) %> &nbsp; | &nbsp; <%= link_to t(:delete_link), history, method: :delete, data: { confirm: t(:delete_confirm) } %>
+        </div>
+      <% end %>
+      <% end %>
+      </dd>
+      <% end %>
+      <% end %>
+    </dl>
+  <% if user_signed_in? %>
+  <% if current_user.admin? %>
+    <%= link_to t(:link_new), new_history_path %>
+  <% end %>
+  <% end %>
+  </article>
 </section>
