--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,4 @@
-<footer id="footer" class="footer">
-			<address>CopyLeft. 2012, SL. All wrongs reserved.&nbsp;&nbsp; <br class="visible-xs" />주소 : 아프리카 사자굴 &nbsp;&nbsp;</address>
-			<!--<%=form_tag root_path,:method=>'get' do %>
-			<%=select_tag 'locale',options_for_select(@language,I18n.locale) %>
-			<%=submit_tag t(:change_language) %>
-			<% end %> -->
+<footer>
+	<div><%=t(:application_name)%>  &nbsp; | &nbsp; <%=t(:application_address) %>  <span class="hidden-xs">&nbsp; | &nbsp;  copyleft 2012</span></div>
+	<div><%=t(:application_description) %></div>
 </footer>
