--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,8 @@
 					<li <% if params[:controller]=='galleries' %>class="active"<% end %>><%=link_to galleries_path do %><%= t('activerecord.models.gallery') %><span class="visible-xs glyphicon glyphicon-chevron-right pull-right"></span><% end %></li>
 					<li <% if params[:controller]=='blogs' %>class="active"<% end %>><%=link_to blogs_path  do %><%= t('activerecord.models.blog') %><span class="visible-xs glyphicon glyphicon-chevron-right pull-right"></span><% end %></li>
 					<li <% if params[:controller]=='questions' %>class="active"<% end %>><%=link_to questions_path do %><%= t('activerecord.models.question') %><span class="visible-xs glyphicon glyphicon-chevron-right pull-right"></span><% end %></li>
+					<li <% if params[:controller]=='faqs' %>class="active"<% end %>><%=link_to faqs_path do %><%= t('activerecord.models.faq') %><span class="visible-xs glyphicon glyphicon-chevron-right pull-right"></span><% end %></li>					
 					<li <% if params[:controller]=='guest_books' %>class="active"<% end %>><%=link_to guest_books_path do %><%= t('activerecord.models.guest_book') %><span class="visible-xs glyphicon glyphicon-chevron-right pull-right"></span><% end %></li>
-					<li <% if params[:controller]=='programs' %>class="active"<% end %>><%=link_to programs_path do %><%= t('activerecord.models.program') %><span class="visible-xs glyphicon glyphicon-chevron-right pull-right"></span><% end %></li>
 				</ul>
 			</nav>
 		</div>
