--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,21 +25,21 @@
 <![endif]-->
 </head>
 <body itemscope itemtype="<%=@page_itemtype %>">
-<%= render :partial => 'layouts/header' %>
-<div id="mom">
-	<div id="main" class="container">
+	<body itemscope itemtype="<%=@page_itemtype %>">
+	<%= render :partial => 'layouts/header' %>
+	<div id="mom">
+		<div id="main" class="container">
 		<% if current_page?(root_path) %>
 		<div class="jumbotron hero-unit">
 			<h2><%=raw t(:home_main_title) %></h2>
 			<p class="lead"><%=raw t(:home_main_description) %></p>
-			<%=link_to '깨끗한 웹을 꿈꾸고 있습니다','/home/popup',:class=>'modal_link btn btn-large btn-success',:'data-toggle'=>"modal",:'data-target'=>"#myModal" %>
 		</div>
 		<hr class="none">
 		<div class="row">
 			<div id="main_main" class="sub_main col-xs-12 col-lg-9">
 		<% else %>
 			<%= render 'layouts/page_header' %>
-			<div class="row">
+		<div class="row">
 				<div class="sub_main col-xs-12 col-lg-9">
 		<% end %>
 				<%= render 'layouts/ad' %>
