수정함:        app/assets/stylesheets/application.scss 	수정함:        app/controllers/galleries_controller.rb 	수정함:        app/views/galleries/_form.html.erb

--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -24,8 +24,8 @@
 	</div>
 </div>
 <div class="form-group">
-	<%= f.label :tag_list, "Tags (separated by commas)" %>
-	<div>
+	<%= f.label :tag_list, "Tags (separated by commas)",:class=>'col-sm-2 control-label' %>
+	<div class="col-sm-10">
 		<%= f.text_field :tag_list, :class=>'form-control' %>
 	</div>
 </div>
