--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   	image:    @meta_image
 	} %>
 <meta name="author" content="Sleeping-Lion" />
-<link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="http://www.sleepinglion.pe.kr/feed?format=rss" />
+<link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="https://www.sleepinglion.pe.kr/feed?format=rss" />
 <%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
 <%= favicon_link_tag 'favicon.ico' %>
 <%= csrf_meta_tags %>
