수정함:        app/views/intro/index.html.erb

--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -2,8 +2,8 @@
 <section id="sl_intro_index">
 	<article itemscope itemtype="http://schema.org/Person">
 		<div id="sl_intro_left" class="col-sm-12 col-md-6">
-			<a href="http://sleepinglion.cdn3.cafe24.com/intro_photo/photo/1/sl.jpg" class="simple_image" title="" itemprop="image">
-				<img src="http://sleepinglion.cdn3.cafe24.com/intro_photo/photo/1/large_thumb_sl.jpg" class="img-responsive" alt="" />
+			<a href="https://sleepinglion.cdn3.cafe24.com/intro_photo/photo/1/sl.jpg" class="simple_image" title="" itemprop="image">
+				<img src="https://sleepinglion.cdn3.cafe24.com/intro_photo/photo/1/large_thumb_sl.jpg" class="img-responsive" alt="" />
 			</a>
 		</div>
 		<div id="sl_intro_right" class="col-sm-12 col-md-6">
