--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -1,4 +1,4 @@
-<article id="sl_main_gallery" class="col-xs-12 carousel slide" data-ride="carousel" itemscope itemtype="http://schema.org/ImageObject">
+<article id="sl_main_gallery" class="col-12 carousel slide" data-ride="carousel" itemscope itemtype="http://schema.org/ImageObject">
 	<h3><%= t('activerecord.models.gallery') %></h3>
 
 	<% unless @galleries.empty? %>
