--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -1,12 +1,12 @@
 <% breadcrumb :intro %>
-<section id="sl_intro_index">
-	<article itemscope itemtype="http://schema.org/Person">
-		<div id="sl_intro_left" class="col-sm-12 col-md-6">
+<section id="sl_intro_index" class="col-12">
+	<article itemscope itemtype="http://schema.org/Person" class="row">
+		<div id="sl_intro_left" class="col-12 col-lg-6">
 			<a href="https://sleepinglion.cdn3.cafe24.com/intro_photo/photo/1/sl.jpg" class="simple_image" title="" itemprop="image">
 				<img src="https://sleepinglion.cdn3.cafe24.com/intro_photo/photo/1/large_thumb_sl.jpg" class="img-responsive" alt="" />
 			</a>
 		</div>
-		<div id="sl_intro_right" class="col-sm-12 col-md-6">
+		<div id="sl_intro_right" class="col-12 col-lg-6">
 			<h3><%=t(:sl_intro_title) %></h3>
 			<dl>
 				<dt><%=t(:name) %></dt>
