--- a/app/views/layouts/_page_header.html.erb
+++ b/app/views/layouts/_page_header.html.erb
@@ -1,8 +1,18 @@
 <div class="row">
-	<div class="col-xs-12">
+	<div class="col-12">
 		<div class="page-header" itemscope itemtype="http://schema.org/WebPage">
 			<h2 itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/WebPageElement"><span itemprop="headline"><%=@controller_name %></span></h2>
-			<%= breadcrumbs :semantic=>true, style: :bootstrap %>
+			<% breadcrumbs.tap do |links| %>
+				<% if links.any? %>
+					<ol class='breadcrumb'>
+						<% links.each do |link| %>
+						  <li class='breadcrumb-item<%= ' active' if link.current? %>'>
+							<%= link_to_unless(link.current?, link.text, link.url) %>
+						  </li>
+						<% end %>
+					</ol>
+				<% end %>
+			  <% end %>
 		</div>
 	</div>
 </div>
