--- a/app/views/questions/_index.html.erb
+++ b/app/views/questions/_index.html.erb
@@ -1,4 +1,4 @@
-<article id="sl_main_question" class="col-xs-12">
+<article id="sl_main_question" class="col-12">
 	<h3><%=t('activerecord.models.question') %></h3>
 	<ul>
 		<% unless @questions.empty? %>
