--- a/app/views/guest_books/index.html.erb
+++ b/app/views/guest_books/index.html.erb
@@ -1,21 +1,21 @@
 <% breadcrumb :guest_books %>
 <section id="sl_guest_book_index">
-	<article class="table-responsive">
-		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped">
+	<article class="table-responsive-lg">
+		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped table-hover">
 			<colgroup>
 				<col style="width:130px" />
 				<col />
-				<col style="width:70px" />
-				<col style="width:70px" />
+				<col style="width:100px" />
+				<col style="width:100px" />
 				<col style="width:130px" />
 			</colgroup>
-			<thead>
+			<thead class="thead-default">
 				<tr>
 					<th class="sl_t_sl_t_name hidden-sm hidden-xs"><%=t(:label_name) %></th>
 					<th class="sl_t_title"><%=t(:label_title) %></th>
-					<th class="sl_t_count"><%=t(:label_comment) %></th>
-					<th class="sl_t_count"><%=t(:label_count) %></th>
-					<th class="sl_t_created_at"><%=t(:label_created_at) %></th>
+					<th class="text-right"><%=t(:label_comment) %></th>
+					<th class="text-right"><%=t(:label_count) %></th>
+					<th class="text-center"><%=t(:label_created_at) %></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -24,9 +24,9 @@
 				<tr>
 					<td class="sl_t_name hidden-sm hidden-xs"><%=userName(guest_book,10) %></td>
 					<td class="sl_t_title"><%= link_to guest_book.title, guest_book  %></td>
-					<td class="sl_t_count"><%= guest_book.guest_book_comments_count %></td>
-					<td class="sl_t_count"><%=guest_book.count+guest_book.impressionist_count(:filter=>:ip_address) %></td>
-					<td class="sl_t_created_at"><%=guest_book.created_at.to_date %></td>
+					<td class="text-right"><%= guest_book.guest_book_comments_count %></td>
+					<td class="text-right"><%=guest_book.count+guest_book.impressionist_count(:filter=>:ip_address) %></td>
+					<td class="text-center"><%=guest_book.created_at.to_date %></td>
 				</tr>
 				<% end %>
 				<% else %>
@@ -38,7 +38,7 @@
 		</table>
 	</article>
 	<div id="sl_index_bottom_menu">
-		<%= link_to t(:link_new), new_guest_book_path,:rel=>"nofollow",:class=>"btn btn-default" %>
+		<%= link_to t(:link_new), new_guest_book_path,:rel=>"nofollow",:class=>"btn btn-primary" %>
 		<%= paginate @guest_books %>
 	</div>
 </section>
