--- a/app/views/notices/_index.html.erb
+++ b/app/views/notices/_index.html.erb
@@ -1,4 +1,4 @@
-<article id="sl_main_notice" class="col-xs-12">
+<article id="sl_main_notice" class="col-12">
 	<h3><%=t('activerecord.models.notice') %></h3>
 	<ul>
 		<% unless @notices.empty? %>
