--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,7 @@
 <% breadcrumb :questions %>
 <div id="sl_question_index">
-	<article class="table-responsive">
-		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped">
+	<article class="table-responsive-lg">
+		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped table-hover">
 			<colgroup>
 				<col style="width:130px" />
 				<col />
@@ -9,13 +9,13 @@
 				<col style="width:90px" />
 				<col style="width:130px" />
 			</colgroup>
-			<thead>
+			<thead class="thead-default">
 				<tr>
 					<th class="sl_t_name"><%=t(:label_name) %></th>
 					<th class="sl_t_title"><%=t(:label_title) %></th>
-					<th class="sl_t_count"><%=t(:label_answer) %></th>
-					<th class="sl_t_count"><%=t(:label_count) %></th>
-					<th class="sl_t_created_at"><%=t(:label_created_at) %></th>
+					<th class="text-right"><%=t(:label_answer) %></th>
+					<th class="text-right"><%=t(:label_count) %></th>
+					<th class="text-center"><%=t(:label_created_at) %></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -24,9 +24,9 @@
 				<tr>
 					<td class="sl_t_name"><%=userName(question,10) %></td>
 					<td class="sl_t_title"><%=checkPrivLink(question) %> &nbsp; <% if(question.secret?) %><%=image_tag('lock.png') %><% end %></td>
-					<td class="sl_t_count"><% if question.question_comments_count? %><%=t(:answer) %><% else %><%=t(:no_answer) %><% end %></td>
-					<td class="sl_t_count"><%=question.count+question.impressionist_count(:filter=>:ip_address) %></td>
-					<td class="sl_t_created_at"><%=question.created_at.to_date %></td>
+					<td class="text-right"><% if question.question_comments_count? %><%=t(:answer) %><% else %><%=t(:no_answer) %><% end %></td>
+					<td class="text-right"><%=question.count+question.impressionist_count(:filter=>:ip_address) %></td>
+					<td class="text-center"><%=question.created_at.to_date %></td>
 				</tr>
 				<% end %>
 				<% else %>
@@ -38,7 +38,7 @@
 		</table>
 	</article>
 	<div id="sl_index_bottom_menu">
-		<%= link_to t(:link_new), new_question_path,:rel=>"nofollow",:class=>"btn btn-default" %>
+		<%= link_to t(:link_new), new_question_path,:rel=>"nofollow",:class=>"btn btn-primary" %>
 		<%= paginate @questions %>
 	</div>
 </div>
