--- a/app/views/blog_categories/_aside.html.erb
+++ b/app/views/blog_categories/_aside.html.erb
@@ -2,8 +2,8 @@
   <div class="box_header">
     <h2><%=t('activerecord.models.blog') %></h2>
     <div class="box_icon">
-      <a href="#" class="btn_minimize"><i class="glyphicon glyphicon-chevron-up"></i></a>
-      <a href="#" class="btn_close"><i class="glyphicon glyphicon-remove"></i></a>
+      <a href="#" class="btn_minimize"><i class="material-icons">expand_less</i></a>
+      <a href="#" class="btn_close"><i class="material-icons">close</i></a>
     </div>
   </div>
 	<div class="box_content">
