--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -12,48 +12,34 @@
 </div>
 <% end %>
 <div class="form-group">
-	<%= f.label :gallery_category_id,:class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.select :gallery_category_id, options_from_collection_for_select(GalleryCategory.where(:enable=>true), 'id', 'title',@gallery_category_id),:class=>'form-control' %>
-	</div>
+	<%= f.label :gallery_category_id,:class=>'control-label' %>
+	<%= f.select :gallery_category_id, options_from_collection_for_select(GalleryCategory.where(:enable=>true), 'id', 'title',@gallery_category_id),:class=>'form-control' %>
 </div>
 <div class="form-group">
-	<%= f.label :title,:class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.text_field :title,:class=>'form-control',:required=>'required' %>
-	</div>
+	<%= f.label :title,:class=>'control-label' %>
+	<%= f.text_field :title,:class=>'form-control',:required=>'required' %>
 </div>
 <div class="form-group">
-	<%= f.label :tag_list, "Tags (separated by commas)",:class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.text_field :tag_list, :class=>'form-control' %>
-	</div>
+	<%= f.label :tag_list, "Tags (separated by commas)",:class=>'control-label' %>
+	<%= f.text_field :tag_list, :class=>'form-control' %>
 </div>
 <div class="form-group">
-	<%= f.label :photo,:class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
+	<%= f.label :photo,:class=>'control-label' %>
 		<% if @gallery.photo? %>
 		<%= image_tag(@gallery.photo.small_thumb) %>
 		<% end %>
 		<%= f.file_field :photo %>
 		<%= f.hidden_field :photo_cache %>
-	</div>
 </div>
 <div class="form-group">
-	<%= f.label :content,:class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.text_area :content,:class=>'form-control',:required=>'required' %>
-	</div>
+	<%= f.label :content,:class=>'control-label' %>
+	<%= f.text_area :content,:class=>'form-control',:required=>'required' %>
 </div>
 <div class="form-group">
-  <%= f.label :location,:class=>'col-sm-2 control-label' %>
-  <div class="col-sm-10">
-    <%= f.text_field :location,:class=>'form-control' %>
-  </div>
+	<%= f.label :location,:class=>'control-label' %>
+	<%= f.text_field :location,:class=>'form-control' %>
 </div>
 <div class="form-group actions">
-	<div class="col-sm-offset-2 col-sm-10">
-		<%= f.submit :class=>"btn btn-primary" %>
-	</div>
+	<%= f.submit :class=>"btn btn-primary btn-block" %>
 </div>
 <% end %>
