--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -17,7 +17,7 @@
 		<div class="row item<% if index.zero? %> active<% end %>">
 			<% gallery.each_with_index do |gallery,index2| %>
 			<% if(index2==6) then g_class='nm' else if(index2==2) then g_class=' m_nm' else g_class='' end %>
-			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title, :'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy img-responsive'),gallery_path(gallery),:class=>"col-md-2#{g_class}" %>
+			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title, :'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy img-responsive'),gallery_path(gallery),:class=>"col-2#{g_class}" %>
 			<noscript>
 				<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:alt=>gallery.title,:class=>'img-responsive'),gallery_path(gallery) %>
 			</noscript>
