--- a/app/views/guest_books/_form.html.erb
+++ b/app/views/guest_books/_form.html.erb
@@ -13,42 +13,32 @@
 <% end %>
 <% unless user_signed_in? %>
 <div class="form-group">
-	<%= f.label :name, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.text_field :name, :class=>'form-control', :required=>'required' %>
-	</div>
+	<%= f.label :name, :class=>'control-label' %>
+	<%= f.text_field :name, :class=>'form-control', :required=>'required' %>
 </div>
 <div class="form-group">
-	<%= f.label :password, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.password_field :password, :class=>'form-control', :required=>'required' %>
-	</div>
+	<%= f.label :password, :class=>'control-label' %>
+	<%= f.password_field :password, :class=>'form-control', :required=>'required' %>
 </div>
 <% end %>
 <div class="form-group">
-	<%= f.label :title, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.text_field :title, :class=>'form-control', :required=>'required' %>
-	</div>
+	<%= f.label :title, :class=>'control-label' %>
+	<%= f.text_field :title, :class=>'form-control', :required=>'required' %>
 </div>
 <%= f.fields_for :guest_book_content do |c| %>
 <div class="form-group">
-	<%= c.label :content, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= c.text_area :content, :class=>'form-control', :rows=>7, :required=>'required' %>
-	</div>
+	<%= c.label :content, :class=>'control-label' %>
+	<%= c.text_area :content, :class=>'form-control', :rows=>7, :required=>'required' %>
 </div>
 <% end %>
 <% if Rails.env.production?	%>
 <% unless user_signed_in? %>
 <div class="form-group">
-	<div class="col-sm-offset-2 col-sm-10"><%= recaptcha_tags :display => { :theme => "clean" } %></div>
+	<%= recaptcha_tags :display => { :theme => "clean" } %>
 </div>
 <% end %>
 <% end %>
 <div class="form-group actions">
-	<div class="col-sm-offset-2 col-sm-10">
-		<%= f.submit :class=>'btn btn-primary' %>
-	</div>
+	<%= f.submit :class=>'btn btn-primary btn-block' %>
 </div>
 <% end %>
