--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 	} %>
 <meta name="author" content="Sleeping-Lion" />
 <link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="https://www.sleepinglion.pe.kr/feed?format=rss" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
 <%= favicon_link_tag 'favicon.ico' %>
 <%= csrf_meta_tags %>
