--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -1,19 +1,19 @@
 <% breadcrumb :notices %>
 <div id="sl_notice_index">
-	<article class="table-responsive">
-		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped">
+	<article class="table-responsive-lg">
+		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped table-hover">
 			<colgroup>
-				<col style="width:100px" />
+				<col style="width:130px" />
 				<col />
-				<col style="width:70px" />
+				<col style="width:100px" />
 				<col style="width:130px" />
 			</colgroup>
-			<thead>
+			<thead class="thead-default">
 				<tr>
-					<th class="sl_name"><%=t(:label_name) %></th>
-					<th class="sl_title"><%=t(:label_title) %></th>
-					<th class="sl_right"><%=t(:label_count) %></th>
-					<th class="sl_right"><%=t(:label_created_at) %></th>
+					<th class="sl_t_sl_t_name hidden-sm hidden-xs"><%=t(:label_name) %></th>
+					<th class="sl_t_title"><%=t(:label_title) %></th>
+					<th class="text-right"><%=t(:label_count) %></th>
+					<th class="text-center"><%=t(:label_created_at) %></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -34,10 +34,10 @@
 			</tbody>
 		</table>
 	</article>
-  <div id="sl_bottom_menu">
-  <% if can? :create, Notice %>
-    <%= link_to t(:link_new), new_notice_path,:rel=>"nofollow" %>
-  <% end %>
-  <%= paginate @notices %>
-  </div>
+	<div id="sl_bottom_menu">
+		<% if can? :create, Notice %>
+		<%= link_to t(:link_new), new_notice_path,:rel=>"nofollow" %>
+		<% end %>
+		<%= paginate @notices %>
+	</div>
 </div>
