--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @question,:html=>{:class=>'form-horizontal'} do |f| %>
+<%= form_for @question,:html=>{:class=>''} do |f| %>
 <% if @question.errors.any? %>
 <div id="error_explanation">
 	<h2><%= pluralize(@question.errors.count, "error") %> prohibited this notice from being saved:</h2>
@@ -13,47 +13,35 @@
 <% end %>
 <% unless user_signed_in? %>
 <div class="form-group">
-	<%= f.label :name, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.text_field :name, :class=>'form-control', :required=>'required' %>
-	</div>
+	<%= f.label :name, :class=>'control-label' %>
+	<%= f.text_field :name, :class=>'form-control', :required=>'required' %>
 </div>
 <div class="form-group">
-	<%= f.label :password, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.password_field :password, :class=>'form-control', :required=>'required' %>
-	</div>
+	<%= f.label :password, :class=>'control-label' %>
+	<%= f.password_field :password, :class=>'form-control', :required=>'required' %>
 </div>
 <% end %>
 <div class="form-group">
-	<%= f.label :title, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.text_field :title, :class=>'form-control', :required=>'required' %>
-	</div>
+	<%= f.label :title, :class=>'control-label' %>
+	<%= f.text_field :title, :class=>'form-control', :required=>'required' %>
 </div>
-<div class="col-sm-offset-2 col-sm-10 checkbox">
-				<label>
-		<%= f.check_box :secret %> <%=t(:secret) %>
-	</label>
+<div class="checkbox">
+	<%= f.check_box :secret %> 	<%= f.label :secret %>
 </div>
 <%= f.fields_for :question_content do |c| %>
 <div class="form-group">
-	<%= c.label :content, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= c.text_area :content, :class=>'form-control', :rows=>5, :required=>'required'  %>
-	</div>
+	<%= c.label :content, :class=>'control-label' %>
+	<%= c.text_area :content, :class=>'form-control', :rows=>5, :required=>'required'  %>
 </div>
 <% end %>
 <% if Rails.env.production? %>
 <% unless user_signed_in? %>
 <div class="form-group">
-	<div class="col-sm-offset-2 col-sm-10"><%= recaptcha_tags :display => { :theme => "clean" } %></div>
+	<%= recaptcha_tags :display => { :theme => "clean" } %>
 </div>
 <% end %>
 <% end %>
 <div class="form-group actions">
-	<div class="col-sm-offset-2 col-sm-10">
-		<%= f.submit :class=>'btn btn-primary' %>
-	</div>
+	<%= f.submit :class=>'btn btn-primary btn-block' %>
 </div>
 <% end %>
