--- a/app/views/galleries/_gallery.html.erb
+++ b/app/views/galleries/_gallery.html.erb
@@ -21,7 +21,7 @@
 </ol>
 <div id="sl_gallery" class="row" <% if gallery %>itemscope itemtype="http://schema.org/ImageObject"<% end %> >
 	<% if gallery %>
-	<div id="sl_gallery_left" class="col-xs-12 col-lg-5">
+	<div id="sl_gallery_left" class="col-12 col-lg-5">
 		<span class="none" itemprop="genre"><%= gallery.gallery_category_id %></span>
 		<%=link_to gallery.photo.to_s,{:title=>gallery.title,:class=>'simple_image'} do %>
 		<figure>
@@ -58,12 +58,12 @@
 		<% end %>
 
 		<% unless @galleries.empty? %>
-		<div class="carousel-inner col-xs-12" role="listbox" style="clear:both">
+		<div class="carousel-inner col-12" role="listbox" style="clear:both">
 			<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
 			<div class="row item<% if index.zero? %> active<% end %>">
 				<% gallery.each_with_index do |gallery,index2| %>
 				<% if(index2>=5) then g_class=' nm' else g_class='' end %>
-				<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-md-2#{g_class}" %>
+				<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-2#{g_class}" %>
 				<noscript>
 					<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %><% if gallery.id==gallery.id %><span class="none" itemprop="thumbnailUrl"><%= sl_get_thumb(gallery.photo.to_s,'small') %></span><% end %>
 				</noscript>
