수정함:        app/assets/stylesheets/application.scss 	수정함:        app/views/galleries/_gallery.html.erb 	수정함:        app/views/galleries/_index.html.erb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -123,15 +123,15 @@ footer form {position:absolute;top:10px;right:10px}
 #sl_gallery_right div.add_info {color:#999}
 /* gallery slide */
 #sl_main_gallery {float:left;width:100%;margin-top:30px;margin-bottom:30px}
-#sl_main_gallery .carousel-inner a {display:block}
+#sl_main_gallery .carousel-inner a {float:left;display:block;width:90%;}
 #sl_main_gallery .carousel-inner a.nm  {margin-right:0}
-#sl_main_gallery .carousel-control {width:20px;color:#999}
-#sl_main_gallery .carousel-control.left {display:block;background:none;left:-30px;z-index:9}
-#sl_main_gallery .carousel-control.right {display:block;background:none;right:-30px;z-index:9}
-#sl_main_gallery .carousel-indicators {bottom:-40px}
-#sl_main_gallery .carousel-indicators li {border-color:#ccc}
-#sl_main_gallery .carousel-indicators .active {background:#ccc}
-#sl_main_gallery.sl_main_list .carousel-control.left,#sl_main_gallery.sl_main_list .carousel-control.right {margin-top:40px}
+#sl_main_gallery .carousel-control-prev,#sl_main_gallery .carousel-control-next {width:20px;color:#999}
+#sl_main_gallery .carousel-control-prev {display:block;left:-30px;z-index:9}
+#sl_main_gallery .carousel-control-next {display:block;right:-30px;z-index:9}
+#sl_main_gallery .carousel-control-prev-icon,#sl_main_gallery .carousel-control-next-icon {color:#999;margin-top:90px}
+#sl_main_gallery .carousel-indicators {bottom:-40px;cursor:pointer}
+#sl_main_gallery .carousel-indicators li {border-color:#ccc;background:#ccc }
+#sl_main_gallery .carousel-indicators .active {background:#666}
 
 /* blog */
 #sl_blog_index {float:left;width:100%;margin:10px 0}
