--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -14,7 +14,7 @@
 	<% unless @galleries.empty? %>
 	<div class="carousel-inner" role="listbox" style="clear:both">
 		<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
-		<div class="row item<% if index.zero? %> active<% end %>">
+		<div class="row carousel-item<% if index.zero? %> active<% end %>">
 			<% gallery.each_with_index do |gallery,index2| %>
 			<% if(index2==6) then g_class='nm' else if(index2==2) then g_class=' m_nm' else g_class='' end %>
 			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title, :'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy img-responsive'),gallery_path(gallery),:class=>"col-2#{g_class}" %>
@@ -36,8 +36,14 @@
 
 	<!-- Controls -->
 	<% if @galleries.count > 6 %>
-	<a class="left carousel-control" href="#sl_main_gallery" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
-	<a class="right carousel-control" href="#sl_main_gallery" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
+	<a class="carousel-control-prev" href="#sl_main_gallery" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#sl_main_gallery" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+	</a>
 	<% end %>
 
 	<%= link_to t(:link_more),galleries_path,:class=>'more' %>
