--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,8 +112,8 @@ footer form {position:absolute;top:10px;right:10px}
 #sl_intro_index #main_content a {clear:both;display:block}
 
 /* gallery */
-.sl_gallery {float:left;width:100%;margin:10px 0}
-#gallery_main_content {float:left;width:100%;margin:0 0 20px}
+.sl_gallery {margin:10px 0}
+#gallery_main_content {margin:0 0 20px}
 #sl_gallery_left {float:left;position:relative;overflow:hidden}
 #sl_gallery_left figure {position:relative;}
 #sl_gallery_left figure figcaption {position:absolute;display:block;bottom:0px;padding:5px 0;margin:0;text-align:center;color:#fff;width:100%;max-width:400px;background:#333;opacity:0.8}
@@ -122,9 +122,7 @@ footer form {position:absolute;top:10px;right:10px}
 #sl_gallery_right div.text p {margin:0;padding:0}
 #sl_gallery_right div.add_info {color:#999}
 /* gallery slide */
-#sl_main_gallery {float:left;width:100%;margin-top:30px;margin-bottom:30px}
-#sl_main_gallery .carousel-inner a {float:left;display:block;width:90%;}
-#sl_main_gallery .carousel-inner a.nm  {margin-right:0}
+#sl_main_gallery {margin-top:30px;margin-bottom:30px}
 #sl_main_gallery .carousel-control-prev,#sl_main_gallery .carousel-control-next {width:20px;color:#999}
 #sl_main_gallery .carousel-control-prev {display:block;left:-30px;z-index:9}
 #sl_main_gallery .carousel-control-next {display:block;right:-30px;z-index:9}
@@ -142,10 +140,10 @@ footer form {position:absolute;top:10px;right:10px}
 
 /* Main Common*/
 #main_main section {margin:0 0 3em;padding:0}
-#main_main article {position:relative;float:left;width:100%;margin:0 0 3em;padding-left:0px}
+#main_main article {position:relative;margin:0 0 3em;padding-left:0px}
 #main_main article ul {list-style: none outside none;margin-bottom:10px;padding:0}
 #main_main article ul li a img {width:100%}
-#main_main article h3 {float:left;width:100%;margin:0 0 1em;padding:0.5em 0;border-bottom:1px solid #ccc}
+#main_main article h3 {margin:0 0 1em;padding:0.5em 0;border-bottom:1px solid #ccc}
 #main_main a.more {position:absolute;top:0.5em;right:15px;color:#999}
 #main_main .section_main2 article {margin-right:30px;width:220px}
 #main_main .section_main2 .article3 {float:right;margin-right:0}
