--- a/app/views/galleries/_gallery.html.erb
+++ b/app/views/galleries/_gallery.html.erb
@@ -48,9 +48,9 @@
 	<% end %>
 	<div id="sl_main_gallery" class="carousel slide">
 		<% unless @galleries.empty? %>
-		<% if galleries.count > 6 %>
+		<% if galleries.count > 5 %>
 		<ol class="carousel-indicators">
-			<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
+			<% @galleries.each_slice(5).each_with_index do |gallery,index| %>
 			<li data-target="#sl_main_gallery" data-slide-to="<%= index %>" <% if index.zero? %>class="active"<% end %>></li>
 			<% end %>
 		</ol>
@@ -58,12 +58,12 @@
 		<% end %>
 
 		<% unless @galleries.empty? %>
-		<div class="carousel-inner col-12" role="listbox" style="clear:both">
-			<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
-			<div class="row carousel-item<% if index.zero? %> active<% end %>">
+		<div class="col-12 carousel-inner" role="listbox" style="clear:both">
+			<% @galleries.each_slice(5).each_with_index do |gallery,index| %>
+			<div class="carousel-item<% if index.zero? %> active<% end %>">
 				<% gallery.each_with_index do |gallery,index2| %>
 				<% if(index2>=5) then g_class=' nm' else g_class='' end %>
-				<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-2#{g_class}" %>
+				<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"#{g_class}" %>
 				<noscript>
 					<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %><% if gallery.id==gallery.id %><span class="none" itemprop="thumbnailUrl"><%= sl_get_thumb(gallery.photo.to_s,'small') %></span><% end %>
 				</noscript>
@@ -72,7 +72,7 @@
 			<% end %>
 		</div>
 		<% else %>
-		<div class="col-xs-12">
+		<div class="col-12">
 			<p>
 				<%= t(:no_data) %>
 			</p>
