--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -12,12 +12,12 @@
 	<% end %>
 
 	<% unless @galleries.empty? %>
-	<div class="carousel-inner" role="listbox" style="clear:both">
-		<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
-		<div class="row carousel-item<% if index.zero? %> active<% end %>">
+	<div class="carousel-inner" role="listbox">
+		<% @galleries.each_slice(5).each_with_index do |gallery,index| %>
+		<div class="carousel-item<% if index.zero? %> active<% end %>">
 			<% gallery.each_with_index do |gallery,index2| %>
-			<% if(index2==6) then g_class='nm' else if(index2==2) then g_class=' m_nm' else g_class='' end %>
-			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title, :'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy img-responsive'),gallery_path(gallery),:class=>"col-2#{g_class}" %>
+			<% if(index2==5) then g_class='nm' else if(index2==2) then g_class=' m_nm' else g_class='' end %>
+			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title, :'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy img-responsive'),gallery_path(gallery) %>
 			<noscript>
 				<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:alt=>gallery.title,:class=>'img-responsive'),gallery_path(gallery) %>
 			</noscript>
