수정함:        app/assets/stylesheets/application.scss 	수정함:        app/views/layouts/_aside.html.erb 	수정함:        app/views/layouts/_page_header.html.erb 	수정함:        app/views/layouts/application.html.erb 	수정함:        app/views/notices/_index.html.erb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -299,9 +299,10 @@ a.left:active {background-position: -60px 0}
 .adsbygoogle {width:100%}
 
 @media all and (max-width: 767px) {
-	html,body {background:#ccc}
-	header {background:none;border-bottom:0;margin:1% 0}
-	header h1 {margin:2%;padding:0;font-size:1.6em}
+    html,body {background:#ccc}
+    .container {width: 100%;max-width:none}    
+    header {background:none;border-bottom:0;margin:1% 0}
+	header h1 {margin:0;padding:0;font-size:1.6em}
 	header h1 a {float:left;background:none;text-indent:0;width:100%;font-weight:bold}
 	header h1 a:hover {text-decoration:none}
 	header h1 a:active {color:red}
@@ -316,9 +317,8 @@ a.left:active {background-position: -60px 0}
 	header nav ul li a .glyphicon {margin-right:1em}
 	.nav-pills > li + li {margin:0}
 	#mom {float:left;clear:both;width:100%;margin:0}
-	#main {float:left;margin:0;padding:0;width:100%;padding:3%;border-radius:5px;background:#fff;}
+	#main {float:left;margin:0;padding-top:2%;padding-bottom:2%;width:100%;border-radius:5px;background:#fff;}
 	#sl_main_gallery .carousel-inner a.m_nm {margin-right:0}
-	#sl_main_gallery .carousel-inner .item {}
 	#sl_main_blog li {margin-bottom:10px}
 	#sl_main_blog li.m_nm {margin-right:0}
 	#main_main article ul {margin:0;padding:0;list-style:none}
