--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -1,4 +1,4 @@
-<aside class="float-right col-lg-3">
+<aside class="d-none d-xl-block col-xl-3">
   <%= render 'blog_categories/aside' %>
 	<% unless @tags.empty? %>
 	<%= render 'blogs/tag_cloud' %>
