--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,11 @@
 		</div>
 		<hr class="none">
 		<div class="row">
-			<div id="main_main" class="sub_main col-12 col-lg-9">
+			<div id="main_main" class="sub_main col-12 col-xl-9">
 		<% else %>
 			<%= render 'layouts/page_header' %>
 			<div class="row">
-				<div class="sub_main col-12 col-lg-9">
+				<div class="sub_main col-12 col-xl-9">
 		<% end %>
 				<%= render 'layouts/ad' %>
 				<%=yield %>
