수정함:        app/views/intro/index.html.erb

--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -29,7 +29,11 @@
 				<dd>
 
 					자동차 , 학교 , 군대 , 윈도우 , 주한미군
-				</dd>
+        </dd>
+        <dt>E-mail</dt>
+        <dd><%=mail_to "admin@sleepinglion","admin@sleepinglion" %></dd>
+        <dt>텔레그램</dt>
+        <dd><%=link_to "@toughjjh","https://t.me/toughjjh" %></dd>
 			</dl>
 			<span class="none" itemprop="url">1</span>
 		</div>
