--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="<%=I18n.locale %>">
 <head>
-<meta charset="utf-8" />
+<meta charset="utf-8">
 <%=display_meta_tags :site => t(:application_name),
 	:title=>@title,
 	:description => @meta_description,
 	:keywords => @meta_keywords,
 	:separator => t(:title_separator),
-	:viewport => 'width=device-width, initial-scale=1.0, user-scalable=yes',
+	:viewport => 'width=device-width, initial-scale=1, shrink-to-fit=no',
 	:reverse => true %>
 <%=display_meta_tags og: {
   	title:   @title,
   	description: @meta_description,
-  	url:      @meta_url,
+  	url:      t(:site_full_url),
   	image:    @meta_image
 	} %>
-  <meta name="author" content="Sleeping-Lion">
-  <link rel="canonical" href="<%=t(:site_full_url) %>">
-<link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="https://www.sleepinglion.pe.kr/feed?format=rss">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<meta name="author" content="Sleeping-Lion">
+<link rel="canonical" href="<%=t(:site_full_url) %>">
+<link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="<%= t(:site_full_url) %>/feed?format=rss">
 <%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
 <%= favicon_link_tag 'favicon.ico' %>
-<%= csrf_meta_tags %>
+<%= csrf_meta_tags -%>
 <!--[if IE]>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <![endif]-->
